--- a/index.html
+++ b/index.html
@@ -66,16 +66,13 @@
 
 
 <!----------------- HEADER ------------------ -->
-<header></header>
+<header>
 <img id="header-img" src="images/hotel_header_1200px.jpg" srcset="
         images/hotel_header_1600px.jpg 1600w,
         images/hotel_header_1200px.jpg 1200w,
         images/hotel_header_900px.jpg 900w,
         images/hotel_header_600px.jpg 600w,
         images/hotel_header_400px.jpg 400w," alt="Encryptia Hotel Header">
-
-
-
     <h1>Welcome to Encryptia Hotel</h1>
     <p>Experience the <em>perfect blend of luxury</em> and comfort in the <strong>heart of the city</strong>.
         Whether you're here for business or leisure, our world class amenities and <em>personalized service</em>
@@ -234,7 +231,7 @@
     <footer>
 
 
-        <p><small>© 2025 by tw1996-dev</small></p>
+      
 
         <ul class="socials">
             <li><a href="https://www.facebook.com/Encryptia.no" target="_blank" rel="noopener"><img class="footer-img"
@@ -243,7 +240,7 @@
                         src="images/icon-logo-instagram.png" alt="Official Instagram profile of Hotel Encryptia"></a>
             </li>
         </ul>
-
+<div class="info">
         <h4><a href="index.html" target="_blank" aria-label="Visit Hotel Encryptia website">Hotel Encryptia</a></h4>
         <address>
             <p><a href="https://maps.app.goo.gl/N1yk9tjrYiweEcn56" target="_blank" rel="noopener">🗺️ 123 Random Street,
@@ -251,7 +248,8 @@
             <p><a href="tel:123456789">☎️ 123456789</a></p>
             <p><a href="mailto:hotel@encryptia.com" target="_blank">✉️ hotel@encryptia.com</a></p>
         </address>
-
+</div>
+  <p class="twdev"><small>© 2025 by tw1996-dev</small></p>
     </footer>
 
 </body>
