--- a/index.html
+++ b/index.html
@@ -64,10 +64,40 @@
     </ul>
 </nav>
 
+<!-- LOGIN Section  -->
+<article id="loginForm">
+    <form action="login-form.html" class="login-form">
+        <i class="fas fa-times" id="form-close"></i>
+        <h3>Login</h3>
+
+        <label for="email"><i class="fas fa-envelope"></i> Email</label>
+        <input type="email" id="email" name="email" class="box" required>
+
+        <label for="password"><i class="fas fa-lock"></i> Password</label>
+        <input type="password" id="password" name="password" class="box" required>
+
+
+        <button type="submit" class="btn">Login</button>
+        <a href="#" id="fblogin" class="fb-login">
+            <i class="fab fa-facebook"></i> Login with Facebook
+        </a>
+
+        <a href="#" id="googlelogin" class="google-login">
+            <i class="fab fa-google"></i> Login with Google
+        </a>
+
+        <aside>
+            <small><a href="#" class="login-link">Forgot your password?</a> <br> Don't have a Hotel Encryptia account?
+                <br><a href="register.html" class="login-link" target="_blank">Join Now</a>.</small>
+        </aside>
+
+    </form>
+</article>
+
 
 <!----------------- HEADER ------------------ -->
 <header>
-<img id="header-img" src="images/hotel_header_1200px.jpg" srcset="
+    <img id="header-img" src="images/hotel_header_1200px.jpg" srcset="
         images/hotel_header_1600px.jpg 1600w,
         images/hotel_header_1200px.jpg 1200w,
         images/hotel_header_900px.jpg 900w,
@@ -115,7 +145,8 @@
             to elevate your daily routine. From invigorating <em>rainfall showers</em> and deep-soaking tubs to
             <strong>premium toiletries</strong> and
             intelligent lighting, every element is curated to provide a <em>rejuvenating and exceptionally clean
-                experience</em>.</p>
+                experience</em>.
+        </p>
         <figure>
             <img src="images/hotel_toilet_600px.png" srcset="
         images/hotel_toilet_600px.png 600w,
@@ -231,27 +262,32 @@
     <footer>
 
 
-      
+
 
         <ul class="socials">
             <li><a href="https://www.facebook.com/Encryptia.no" target="_blank" rel="noopener"><img class="footer-img"
                         src="images/icon-logo-facebook.png" alt="Official Facebook page of Hotel Encryptia"></a></li>
-            <li><a href="https://www.instagram.com/encryptiacity/" target="_blank" rel="noopener"><img class="footer-img"
-                        src="images/icon-logo-instagram.png" alt="Official Instagram profile of Hotel Encryptia"></a>
+            <li><a href="https://www.instagram.com/encryptiacity/" target="_blank" rel="noopener"><img
+                        class="footer-img" src="images/icon-logo-instagram.png"
+                        alt="Official Instagram profile of Hotel Encryptia"></a>
             </li>
         </ul>
-<div class="info">
-        <h4><a href="index.html" target="_blank" aria-label="Visit Hotel Encryptia website">Hotel Encryptia</a></h4>
-        <address>
-            <p><a href="https://maps.app.goo.gl/N1yk9tjrYiweEcn56" target="_blank" rel="noopener">🗺️ 123 Random Street,
-                    Cityville, 56789</a></p>
-            <p><a href="tel:123456789">☎️ 123456789</a></p>
-            <p><a href="mailto:hotel@encryptia.com" target="_blank">✉️ hotel@encryptia.com</a></p>
-        </address>
-</div>
-  <p class="twdev"><small>© 2025 by tw1996-dev</small></p>
+        <div class="info">
+            <h4><a href="index.html" target="_blank" aria-label="Visit Hotel Encryptia website">Hotel Encryptia</a></h4>
+            <address>
+                <p><a href="https://maps.app.goo.gl/N1yk9tjrYiweEcn56" target="_blank" rel="noopener">🗺️ 123 Random
+                        Street,
+                        Cityville, 56789</a></p>
+                <p><a href="tel:123456789">☎️ 123456789</a></p>
+                <p><a href="mailto:hotel@encryptia.com" target="_blank">✉️ hotel@encryptia.com</a></p>
+            </address>
+        </div>
+        <p class="twdev"><small>© 2025 by tw1996-dev</small></p>
     </footer>
 
+
+
+    <script src="scripts/login-form.js"></script>
 </body>
 
 </html>
