--- a/index.html
+++ b/index.html
@@ -54,66 +54,104 @@
 
 
 
-<!----------------- NAVIGATION------------------ -->
-
-<nav>
-    <ul class="navi">
-        <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-        <li><a href="booking.html" target="_blank"><i class="fas fa-calendar-check"></i> Book</a></li>
-        <li><a href="#" id="login-btn"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-    </ul>
-</nav>
-
-<!-- LOGIN Section  -->
-<article id="loginForm">
-    <form action="login-form.html" class="login-form">
-        <i class="fas fa-times" id="form-close"></i>
-        <h3>Login</h3>
-
-        <label for="email"><i class="fas fa-envelope"></i> Email</label>
-        <input type="email" id="email" name="email" class="box" required>
-
-        <label for="password"><i class="fas fa-lock"></i> Password</label>
-        <input type="password" id="password" name="password" class="box" required>
 
 
-        <button type="submit" class="btn">Login</button>
-        <a href="#" id="fblogin" class="fb-login">
-            <i class="fab fa-facebook"></i> Login with Facebook
-        </a>
 
-        <a href="#" id="googlelogin" class="google-login">
-            <i class="fab fa-google"></i> Login with Google
-        </a>
-
-        <aside>
-            <small><a href="#" class="login-link">Forgot your password?</a> <br> Don't have a Hotel Encryptia account?
-                <br><a href="register.html" class="login-link" target="_blank">Join Now</a>.</small>
-        </aside>
-
-    </form>
-</article>
+<!----------------- BODY  ------------->
 
 
-<!----------------- HEADER ------------------ -->
-<header>
-    <img id="header-img" src="images/hotel_header_1200px.jpg" srcset="
+<body>
+
+    <!----------------- NAVIGATION------------------ -->
+
+    <nav>
+        <ul class="navi">
+            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="booking.html" target="_blank"><i class="fas fa-calendar-check"></i> Book</a></li>
+            <li><a href="#" id="login-btn"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+        </ul>
+    </nav>
+
+    <!-- LOGIN Section  -->
+    <article id="loginForm">
+
+        <form action="login-form.html" class="login-form" method="POST">
+            <i class="fas fa-times" id="form-close"></i>
+            <h3>Login</h3>
+
+            <label for="login-username"><i class="fas fa-user"></i> Username</label>
+            <input type="text" id="login-username" name="username" class="box" required>
+
+            <label for="email"><i class="fas fa-envelope"></i> Email</label>
+            <input type="email" id="email" name="email" class="box" required>
+
+            <label for="password"><i class="fas fa-lock"></i> Password</label>
+            <div class="password-wrapper">
+                <input type="password" id="password" name="password" class="box" required>
+                <i class="fas fa-eye" id="togglePassword"></i>
+            </div>
+
+            <button type="submit" id="loginbtn" class="btn">Login</button>
+            <a href="#" id="fblogin" class="fb-login">
+                <i class="fab fa-facebook"></i> Login with Facebook
+            </a>
+
+            <a href="#" id="googlelogin" class="google-login">
+                <i class="fab fa-google"></i> Login with Google
+            </a>
+
+            <aside>
+                <small><a href="#" class="login-link">Forgot your password?</a> <br> Don't have a Hotel Encryptia
+                    account?
+                    <br><a href="#" id="register-btn" class="register-link" target="_blank">Join Now</a></small>
+            </aside>
+
+        </form>
+    </article>
+
+    <!-- REGISTER-SECTION -->
+    <article id="registerForm">
+        <form action="register-form.html" class="register-form" method="POST">
+            <i class="fas fa-times" id="register-close"></i>
+            <h3>Register</h3>
+            <label for="register-username"><i class="fas fa-user"></i> Username</label>
+            <input type="text" id="register-username" name="username" class="box" required>
+
+            <label for="new-email"><i class="fas fa-envelope"></i> Email</label>
+            <input type="email" id="new-email" name="new-email" class="box" required>
+
+            <label for="new-password"><i class="fas fa-lock"></i> Password</label>
+            <div class="password-wrapper">
+                <input type="password" id="new-password" name="new-password" class="box" required>
+                <i class="fas fa-eye" id="toggleNewPassword"></i>
+            </div>
+
+            <button type="submit" id="registerbtn" class="btn">Register</button>
+
+            <p>or</p>
+            <a href="#" id="fbregister" class="fb-login">
+                <i class="fab fa-facebook"></i> Register with FB
+            </a>
+
+            <a href="#" id="googleregister" class="google-login">
+                <i class="fab fa-google"></i> Register with Google
+            </a>
+        </form>
+    </article>
+
+    <!----------------- HEADER ------------------ -->
+    <header>
+        <img id="header-img" src="images/hotel_header_1200px.jpg" srcset="
         images/hotel_header_1600px.jpg 1600w,
         images/hotel_header_1200px.jpg 1200w,
         images/hotel_header_900px.jpg 900w,
         images/hotel_header_600px.jpg 600w,
         images/hotel_header_400px.jpg 400w," alt="Encryptia Hotel Header">
-    <h1>Welcome to Encryptia Hotel</h1>
-    <p>Experience the <em>perfect blend of luxury</em> and comfort in the <strong>heart of the city</strong>.
-        Whether you're here for business or leisure, our world class amenities and <em>personalized service</em>
-        will make your stay unforgettable.</p>
-</header>
-
-
-<!----------------- BODY  ------------->
-
-<body>
-
+        <h1>Welcome to Encryptia Hotel</h1>
+        <p>Experience the <em>perfect blend of luxury</em> and comfort in the <strong>heart of the city</strong>.
+            Whether you're here for business or leisure, our world class amenities and <em>personalized service</em>
+            will make your stay unforgettable.</p>
+    </header>
     <section id="rooms">
         <h2>Rooms</h2>
         <p> Our rooms are designed to provide an <strong>unparalleled experience of luxury and comfort</strong>.
@@ -287,7 +325,9 @@
 
 
 
-    <script src="scripts/login-form.js"></script>
+    <!-- <script src="scripts/login-form.js"></script> -->
+    <script src="scripts/showpassword.js"></script>
+    <script src="scripts/register.js"></script>
 </body>
 
 </html>
