--- a/login.html
+++ b/login.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Homepage</title>
 
-            <!---- Metadata for search engines and social sharing ---->
+    <!---- Metadata for search engines and social sharing ---->
     <meta name="description"
-        content="CONTENT-LATER">
-    <meta name="keywords" content="KEYWORDS - LATER">
+        content="Experience unparalleled luxury and comfort at Hotel Encryptia. Discover our opulent rooms, world-class dining, rejuvenating SPA, bespoke services, state-of-the-art bathrooms, and high-end fitness facilities. Designed for the discerning traveler seeking excellence and a truly memorable stay.">
+    <meta name="keywords"
+        content="Hotel Encryptia, luxury hotel, modern hotel, elegant hotel, wealthy travelers, high-end accommodation, luxury rooms, spa treatments, hotel wellness, gourmet dining, world-class chefs, personalized service, bespoke concierge, luxurious bathrooms, modern gym, fitness facilities, exclusive hotel, premium stay, refined travel">
     <meta name="author" content="tw1996-dev">
 
-        <!--------------------- Favicon ----------------->
+    <!--------------------- Favicon ----------------->
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
@@ -36,11 +37,94 @@
     <meta property="og:url" content="" />
     <meta property="og:image" content="" />
 
-        <!--------------------- CSS ----------------->
-    <link href="css/style.css" rel="stylesheet">
+
+
+    <!--------------------- CSS ----------------->
+    <link href="css/styles.css" rel="stylesheet">
+
+
+    <!-- FONTS/ICONS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 
 </head>
-<body>
-    
+<body id="bodyy">
+        <!----------------- NAVIGATION------------------ -->
+<header>
+    <nav>
+        <ul class="navi">
+            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="booking.html" target="_blank"><i class="fas fa-calendar-check"></i> Book</a></li>
+            <li><a href="#" id="login-btn"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+        </ul>
+    </nav>
+</header>
+
+
+
+        <!-- LOGIN Section  -->
+    <article id="loginForm">
+
+        <form action="login-form.html" class="login-form" method="POST">
+            
+            <h3>Login</h3>
+
+            <label for="login-username"><i class="fas fa-user"></i> Username</label>
+            <input type="text" id="login-username" name="username" class="box" required>
+
+            <label for="email"><i class="fas fa-envelope"></i> Email</label>
+            <input type="email" id="email" name="email" class="box" required>
+
+            <label for="password"><i class="fas fa-lock"></i> Password</label>
+            <div class="password-wrapper">
+                <input type="password" id="password" name="password" class="box" required>
+                <i class="fas fa-eye" id="togglePassword"></i>
+            </div>
+
+            <button type="submit" id="loginbtn" class="btn">Login</button>
+            <a href="#" id="fblogin" class="fb-login">
+                <i class="fab fa-facebook"></i> Login with Facebook
+            </a>
+
+            <a href="#" id="googlelogin" class="google-login">
+                <i class="fab fa-google"></i> Login with Google
+            </a>
+
+            <aside>
+                <small><a href="#" class="login-link">Forgot your password?</a> <br> Don't have a Hotel Encryptia
+                    account?
+                    <br><a href="#" id="register-btn" class="register-link" target="_blank">Join Now</a></small>
+            </aside>
+
+        </form>
+    </article>
+
+
+
+    <!-- FOOTER - Contact information and organization details -->
+
+    <footer>
+        <ul class="socials">
+            <li><a href="https://www.facebook.com/Encryptia.no" target="_blank" rel="noopener"><img class="footer-img"
+                        src="images/icon-logo-facebook.png" alt="Official Facebook page of Hotel Encryptia"></a></li>
+            <li><a href="https://www.instagram.com/encryptiacity/" target="_blank" rel="noopener"><img
+                        class="footer-img" src="images/icon-logo-instagram.png"
+                        alt="Official Instagram profile of Hotel Encryptia"></a>
+            </li>
+        </ul>
+        <div class="info">
+            <h4><a href="index.html" target="_blank" aria-label="Visit Hotel Encryptia website">Hotel Encryptia</a></h4>
+            <address>
+                <p><a href="https://maps.app.goo.gl/N1yk9tjrYiweEcn56" target="_blank" rel="noopener">🗺️ 123 Random
+                        Street,
+                        Cityville, 56789</a></p>
+                <p><a href="tel:123456789">☎️ 123456789</a></p>
+                <p><a href="mailto:hotel@encryptia.com" target="_blank">✉️ hotel@encryptia.com</a></p>
+            </address>
+        </div>
+        <p class="twdev"><small>© 2025 by tw1996-dev</small></p>
+    </footer>
+<script src="scripts/showpassword.js"></script>
+
 </body>
 </html>
