--- a/register.html
+++ b/register.html
@@ -37,10 +37,78 @@
     <meta property="og:image" content="" />
 
         <!--------------------- CSS ----------------->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+
+        <!-- FONTS/ICONS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+    
 
 </head>
-<body>
-    
+<body id="bodyy">
+      <!----------------- NAVIGATION------------------ -->
+<header>
+    <nav>
+        <ul class="navi">
+            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="booking.html" target="_blank"><i class="fas fa-calendar-check"></i> Book</a></li>
+            <li><a href="#" id="login-btn"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+        </ul>
+    </nav>
+</header>
+
+    <!-- REGISTER-SECTION -->
+    <article id="registerForm">
+        <form action="register-form.html" class="register-form" method="POST">
+            <h3>Register</h3>
+            <label for="register-username"><i class="fas fa-user"></i> Username</label>
+            <input type="text" id="register-username" name="username" class="box" required>
+
+            <label for="new-email"><i class="fas fa-envelope"></i> Email</label>
+            <input type="email" id="new-email" name="new-email" class="box" required>
+
+            <label for="new-password"><i class="fas fa-lock"></i> Password</label>
+            <div class="password-wrapper">
+                <input type="password" id="new-password" name="new-password" class="box" required>
+                <i class="fas fa-eye" id="toggleNewPassword"></i>
+            </div>
+
+            <button type="submit" id="registerbtn" class="btn">Register</button>
+
+            <p>or</p>
+            <a href="#" id="fbregister" class="fb-login">
+                <i class="fab fa-facebook"></i> Register with FB
+            </a>
+
+            <a href="#" id="googleregister" class="google-login">
+                <i class="fab fa-google"></i> Register with Google
+            </a>
+        </form>
+    </article>
+
+       <!-- FOOTER - Contact information and organization details -->
+
+    <footer>
+        <ul class="socials">
+            <li><a href="https://www.facebook.com/Encryptia.no" target="_blank" rel="noopener"><img class="footer-img"
+                        src="images/icon-logo-facebook.png" alt="Official Facebook page of Hotel Encryptia"></a></li>
+            <li><a href="https://www.instagram.com/encryptiacity/" target="_blank" rel="noopener"><img
+                        class="footer-img" src="images/icon-logo-instagram.png"
+                        alt="Official Instagram profile of Hotel Encryptia"></a>
+            </li>
+        </ul>
+        <div class="info">
+            <h4><a href="index.html" target="_blank" aria-label="Visit Hotel Encryptia website">Hotel Encryptia</a></h4>
+            <address>
+                <p><a href="https://maps.app.goo.gl/N1yk9tjrYiweEcn56" target="_blank" rel="noopener">🗺️ 123 Random
+                        Street,
+                        Cityville, 56789</a></p>
+                <p><a href="tel:123456789">☎️ 123456789</a></p>
+                <p><a href="mailto:hotel@encryptia.com" target="_blank">✉️ hotel@encryptia.com</a></p>
+            </address>
+        </div>
+        <p class="twdev"><small>© 2025 by tw1996-dev</small></p>
+    </footer>
+<script src="scripts/showpasswordregi.js"></script>
 </body>
 </html>
