--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Login</title>
 
     <!---- Metadata for search engines and social sharing ---->
     <meta name="description"
@@ -67,7 +67,7 @@
 
         <form action="login-form.html" class="login-form" method="POST">
             
-            <h3>Login</h3>
+            <legend>Login</legend>
 
             <label for="login-username"><i class="fas fa-user"></i> Username</label>
             <input type="text" id="login-username" name="username" class="box" required>
