--- a/register.html
+++ b/register.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Page</title>
 
-            <!---- Metadata for search engines and social sharing ---->
-    <meta name="description"
-        content="CONTENT-LATER">
+    <!---- Metadata for search engines and social sharing ---->
+    <meta name="description" content="CONTENT-LATER">
     <meta name="keywords" content="KEYWORDS - LATER">
     <meta name="author" content="tw1996-dev">
 
-        <!--------------------- Favicon ----------------->
+    <!--------------------- Favicon ----------------->
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
@@ -36,41 +36,64 @@
     <meta property="og:url" content="" />
     <meta property="og:image" content="" />
 
-        <!--------------------- CSS ----------------->
+    <!--------------------- CSS ----------------->
     <link href="css/styles.css" rel="stylesheet">
 
-        <!-- FONTS/ICONS -->
+    <!-- FONTS/ICONS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
+
 
 </head>
+
 <body id="bodyy">
-      <!----------------- NAVIGATION------------------ -->
-<header>
-    <nav>
-        <ul class="navi">
-            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="booking.html" target="_blank"><i class="fas fa-calendar-check"></i> Book</a></li>
-            <li><a href="#" id="login-btn"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-        </ul>
-    </nav>
-</header>
+    <!----------------- NAVIGATION------------------ -->
+    <header>
+        <nav>
+            <ul class="navi">
+                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="booking.html" target="_blank"><i class="fas fa-calendar-check"></i> Book</a></li>
+                <li><a href="#" id="login-btn"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <!-- REGISTER-SECTION -->
     <article id="registerForm">
         <form action="register-form.html" class="register-form" method="POST">
-            <h3>Register</h3>
+            <legend>Register</legend>
+
+
             <label for="register-username"><i class="fas fa-user"></i> Username</label>
-            <input type="text" id="register-username" name="username" class="box" required>
+            <input type="text" id="register-username" name="username" class="box" required placeholder="username">
+            <div class="register-hints">
+                <ul class="register-ul">
+                    <li class="hints" id="length-hint">Min. 6 characters</li>
+                    <li class="hints" id="special-char-hint">No special characters</li>
+                </ul>
+            </div>
+
 
             <label for="new-email"><i class="fas fa-envelope"></i> Email</label>
-            <input type="email" id="new-email" name="new-email" class="box" required>
+            <input type="email" id="new-email" name="new-email" class="box" required placeholder="example@email.com">
 
             <label for="new-password"><i class="fas fa-lock"></i> Password</label>
             <div class="password-wrapper">
                 <input type="password" id="new-password" name="new-password" class="box" required>
                 <i class="fas fa-eye" id="toggleNewPassword"></i>
+            </div>
+            <div class="register-hints">
+                <ul>
+                    <li class="hints" id="pass-length-hint">Min. 8 characters</li>
+                    <li class="hints" id="uppercase-hint">One uppercase letter</li>
+                    <li class="hints" id="number-hint">One number</li>
+                    <li class="hints" id="pass-special-char-hint">One special character</li>
+                </ul>
             </div>
 
             <button type="submit" id="registerbtn" class="btn">Register</button>
@@ -86,7 +109,7 @@
         </form>
     </article>
 
-       <!-- FOOTER - Contact information and organization details -->
+    <!-- FOOTER - Contact information and organization details -->
 
     <footer>
         <ul class="socials">
@@ -109,6 +132,14 @@
         </div>
         <p class="twdev"><small>© 2025 by tw1996-dev</small></p>
     </footer>
-<script src="scripts/showpasswordregi.js"></script>
+    <script src="scripts/showpasswordregi.js"></script>
+    <script src="scripts/validation.js"></script>
+    <!-- <script src="scripts/passvalidation.js"></script>  -->
+ <script src="scripts/registerhints.js"></script>
+
+
+
+
 </body>
+
 </html>
