--- a/login.html
+++ b/login.html
@@ -93,7 +93,7 @@
             <aside>
                 <small><a href="#" class="login-link">Forgot your password?</a> <br> Don't have a Hotel Encryptia
                     account?
-                    <br><a href="#" id="register-btn" class="register-link" target="_blank">Join Now</a></small>
+                    <br><a href="register.html" id="register-btn" class="register-link" target="_blank">Join Now</a></small>
             </aside>
 
         </form>
