starting with booking form
small fixed (links on pages) started doing booking form

--- a/booking.html
+++ b/booking.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking Page</title>
 
-            <!---- Metadata for search engines and social sharing ---->
-    <meta name="description"
-        content="CONTENT-LATER">
+    <!---- Metadata for search engines and social sharing ---->
+    <meta name="description" content="CONTENT-LATER">
     <meta name="keywords" content="KEYWORDS - LATER">
     <meta name="author" content="tw1996-dev">
 
-        <!--------------------- Favicon ----------------->
+    <!--------------------- Favicon ----------------->
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
@@ -35,12 +35,95 @@
     <meta property="og:type" content="" />
     <meta property="og:url" content="" />
     <meta property="og:image" content="" />
-    
-        <!--------------------- CSS ----------------->
-    <link href="css/style.css" rel="stylesheet">
+
+    <!--------------------- CSS ----------------->
+    <link href="css/styles.css" rel="stylesheet">
+
+    <!-- FONTS/ICONS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
+
+
+
+
 
 </head>
-<body>
-    
+
+<body id="bodyy">
+    <!----------------- NAVIGATION------------------ -->
+    <header>
+        <nav>
+            <ul class="navi">
+                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="booking.html" target="_blank"><i class="fas fa-calendar-check"></i> Book</a></li>
+                <li><a href="login.html" id="login-btn"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- REGISTER-SECTION -->
+    <article id="bookingForm">
+        <form action="register-form.html" class="register-form" method="POST">
+            <legend>Booking</legend>
+
+
+            <label for="name"><i class="fas fa-user"></i>Name</label>
+            <input type="text" id="bookingname" name="usernamebookingname" class="box" required placeholder="Name">
+
+            <label for="new-email"><i class="fas fa-envelope"></i> Email</label>
+            <input type="email" id="new-email" name="new-email" class="box" required placeholder="example@email.com">
+            <label for="phone"><i class="fa-solid fa-phone"></i> Phone number</label>
+            <input type="tel" id="phone" name="phone" class="box" required placeholder="12345678">
+            <label for="checkin-date"><i class="fas fa-calendar-alt"></i> Check-in Date</label>
+            <input type="date" id="checkin-date" name="checkin_date" class="box" required>
+
+            <label for="checkout-date"><i class="fas fa-calendar-alt"></i> Check-out Date</label>
+            <input type="date" id="checkout-date" name="checkout_date" class="box" required>
+
+
+
+            <button type="submit" id="bookbtn" class="btn">Book</button>
+
+
+        </form>
+    </article>
+
+    <!-- FOOTER - Contact information and organization details -->
+
+    <footer>
+        <ul class="socials">
+            <li><a href="https://www.facebook.com/Encryptia.no" target="_blank" rel="noopener"><img class="footer-img"
+                        src="images/icon-logo-facebook.png" alt="Official Facebook page of Hotel Encryptia"></a></li>
+            <li><a href="https://www.instagram.com/encryptiacity/" target="_blank" rel="noopener"><img
+                        class="footer-img" src="images/icon-logo-instagram.png"
+                        alt="Official Instagram profile of Hotel Encryptia"></a>
+            </li>
+        </ul>
+        <div class="info">
+            <h4><a href="index.html" target="_blank" aria-label="Visit Hotel Encryptia website">Hotel Encryptia</a></h4>
+            <address>
+                <p><a href="https://maps.app.goo.gl/N1yk9tjrYiweEcn56" target="_blank" rel="noopener">🗺️ 123 Random
+                        Street,
+                        Cityville, 56789</a></p>
+                <p><a href="tel:123456789">☎️ 123456789</a></p>
+                <p><a href="mailto:hotel@encryptia.com" target="_blank">✉️ hotel@encryptia.com</a></p>
+            </address>
+        </div>
+        <p class="twdev"><small>© 2025 by tw1996-dev</small></p>
+    </footer>
+    <script src="scripts/showpasswordregi.js"></script>
+    <script src="scripts/validation.js"></script>
+    <!-- <script src="scripts/passvalidation.js"></script>  -->
+    <script src="scripts/registerhints.js"></script>
+
+
+
+
 </body>
+
 </html>
