--- a/login.html
+++ b/login.html
@@ -51,11 +51,11 @@
 <body id="bodyy">
         <!----------------- NAVIGATION------------------ -->
 <header>
-    <nav>
+    <nav id="main-nav">
         <ul class="navi">
             <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="booking.html" target="_blank"><i class="fas fa-calendar-check"></i> Book</a></li>
-            <li><a href="#" id="login-btn"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+            <li><a href="login.html" id="login-btn"><i class="fas fa-sign-in-alt"></i> Login</a></li>
         </ul>
     </nav>
 </header>
