Booking form calendar
added script to calendar in booking form , small html fixes , small css fixes

--- a/booking.html
+++ b/booking.html
@@ -68,24 +68,26 @@
 
     <!-- REGISTER-SECTION -->
     <article id="bookingForm">
-        <form action="register-form.html" class="register-form" method="POST">
+        <form action="booking-form.html" class="booking-form" method="POST">
             <legend>Booking</legend>
 
 
-            <label for="name"><i class="fas fa-user"></i>Name</label>
+            <label for="bookingname"><i class="fas fa-user"></i>Name</label>
             <input type="text" id="bookingname" name="usernamebookingname" class="box" required placeholder="Name">
 
             <label for="new-email"><i class="fas fa-envelope"></i> Email</label>
             <input type="email" id="new-email" name="new-email" class="box" required placeholder="example@email.com">
             <label for="phone"><i class="fa-solid fa-phone"></i> Phone number</label>
             <input type="tel" id="phone" name="phone" class="box" required placeholder="12345678">
+
+
             <label for="checkin-date"><i class="fas fa-calendar-alt"></i> Check-in Date</label>
             <input type="date" id="checkin-date" name="checkin_date" class="box" required>
-
+            
             <label for="checkout-date"><i class="fas fa-calendar-alt"></i> Check-out Date</label>
             <input type="date" id="checkout-date" name="checkout_date" class="box" required>
 
-
+            <p id="numberOfdays">Days:</p>
 
             <button type="submit" id="bookbtn" class="btn">Book</button>
 
@@ -116,10 +118,11 @@
         </div>
         <p class="twdev"><small>© 2025 by tw1996-dev</small></p>
     </footer>
-    <script src="scripts/showpasswordregi.js"></script>
-    <script src="scripts/validation.js"></script>
+    <!-- <script src="scripts/showpasswordregi.js"></script> -->
+    <!-- <script src="scripts/validation.js"></script> -->
     <!-- <script src="scripts/passvalidation.js"></script>  -->
-    <script src="scripts/registerhints.js"></script>
+    <!-- <script src="scripts/registerhints.js"></script> -->
+    <script src="scripts/datesvalidation.js"></script>
 
 
 
