--- a/register.html
+++ b/register.html
@@ -133,7 +133,7 @@
         <p class="twdev"><small>© 2025 by tw1996-dev</small></p>
     </footer>
     <script src="scripts/showpasswordregi.js"></script>
-    <script src="scripts/validation.js"></script>
+    <script src="scripts/password-validation.js"></script>
     <!-- <script src="scripts/passvalidation.js"></script>  -->
  <script src="scripts/registerhints.js"></script>
 
