--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
 
 
-    <script src="scripts/showpassword.js"></script>
+    <!-- <script src="scripts/showpassword.js"></script> -->
 
 </body>
 
