--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 
     <!----------------- HEADER ------------------ -->
-    <header>
+    <header id="mainPageHeader">
         <img id="header-img" src="images/hotel_header_1200px.jpg" srcset="
         images/hotel_header_2000px.jpg 2000w,
         images/hotel_header_1600px.jpg 1600w,
@@ -79,11 +79,14 @@
         images/hotel_header_900px.jpg 900w,
         images/hotel_header_600px.jpg 600w,
         images/hotel_header_400px.jpg 400w," alt="Encryptia Hotel Header">
+        <div class="header-content">
         <h1>Welcome to Encryptia Hotel</h1>
-        <p>Experience the <em>perfect blend of luxury</em> and comfort in the <strong>heart of the city</strong>.
+        <blockquote>Experience the <em>perfect blend of luxury</em> and comfort in the <strong>heart of the city</strong>.
             Whether you're here for business or leisure, our world class amenities and <em>personalized service</em>
-            will make your stay unforgettable.</p>
+            will make your stay unforgettable.</blockquote></div>
     </header>
+
+    <div id="MainPageContent">
     <section id="rooms">
         <h2>Rooms</h2>
         <p> Our rooms are designed to provide an <strong>unparalleled experience of luxury and comfort</strong>.
@@ -96,7 +99,7 @@
             of travelers seeking excellence. Whether for business or leisure, guests can indulge in a
             serene atmosphere where <em>quality meets elegance</em>.</p>
         <figure>
-            <img src="images/hotel_room_600px.png" srcset="
+            <img class="contentImg" src="images/hotel_room_600px.png" srcset="
         images/hotel_room_600px.png 600w,
         images/hotel_room_400px.png 400w,
         images/hotel_room_200px.png 200w" alt="Hotel room">
@@ -118,7 +121,7 @@
                 experience</em>.
         </p>
         <figure>
-            <img src="images/hotel_toilet_600px.png" srcset="
+            <img class="contentImg" src="images/hotel_toilet_600px.png" srcset="
         images/hotel_toilet_600px.png 600w,
         images/hotel_toilet_400px.png 400w,
         images/hotel_toilet_200px.png 200w" alt="Modern bathrooms">
@@ -140,7 +143,7 @@
                 service</em>,
             prepare to be captivated by flavors that <strong>transcend expectations</strong>.</p>
         <figure>
-            <img src="images/hotel_food_600px.png" srcset="
+            <img class="contentImg" src="images/hotel_food_600px.png" srcset="
         images/hotel_food_600px.png 600w,
         images/hotel_food_400px.png 400w,
         images/hotel_food_200px.png 200w" alt="Exquisite food">
@@ -166,7 +169,7 @@
             the senses and revitalizes the soul.
         </p>
         <figure>
-            <img src="images/hotel_spa_600px.png" srcset="
+            <img class="contentImg" src="images/hotel_spa_600px.png" srcset="
         images/hotel_spa_600px.png 600w,
         images/hotel_spa_400px.png 400w,
         images/hotel_spa_200px.png 200w" alt="SPA area">
@@ -190,7 +193,7 @@
             during your stay.
         </p>
         <figure>
-            <img src="images/hotel_gym_600px.png" srcset="
+            <img class="contentImg" src="images/hotel_gym_600px.png" srcset="
         images/hotel_gym_600px.png 600w,
         images/hotel_gym_400px.png 400w,
         images/hotel_gym_200px.png 200w" alt="Hotel gym">
@@ -214,7 +217,7 @@
             staff, we strive to make every moment of your stay <strong>effortlessly luxurious</strong> and <em>truly
                 memorable</em>.</p>
         <figure>
-            <img src="images/hotel_people_600px.png" srcset="
+            <img class="contentImg" src="images/hotel_people_600px.png" srcset="
         images/hotel_people_600px.png 600w,
         images/hotel_people_400px.png 400w,
         images/hotel_people_200px.png 200w" alt="Hotel service">
@@ -223,7 +226,7 @@
             </figcaption>
         </figure>
     </section>
-
+</div>
 
 
 
@@ -254,7 +257,7 @@
 
 
 
-    <!-- <script src="scripts/showpassword.js"></script> -->
+
 
 </body>
 
