--- a/register.html
+++ b/register.html
@@ -80,7 +80,7 @@
 
 
             <label for="new-email"><i class="fas fa-envelope"></i> Email</label>
-            <input type="email" id="new-email" name="new-email" class="box" required placeholder="example@email.com">
+            <input type="email" id="new-email" name="new-email" class="box" required placeholder="example@email.com" autocomplete="email">
 
             <label for="new-password"><i class="fas fa-lock"></i> Password</label>
             <div class="password-wrapper">
