--- a/booking.html
+++ b/booking.html
@@ -76,9 +76,9 @@
             <input type="text" id="bookingname" name="usernamebookingname" class="box" required placeholder="Name">
 
             <label for="new-email"><i class="fas fa-envelope"></i> Email</label>
-            <input type="email" id="new-email" name="new-email" class="box" required placeholder="example@email.com">
+            <input type="email" id="new-email" name="new-email" class="box" required placeholder="example@email.com" autocomplete="email">
             <label for="phone"><i class="fa-solid fa-phone"></i> Phone number</label>
-            <input type="tel" id="phone" name="phone" class="box" required placeholder="12345678">
+            <input type="tel" id="phone" name="phone" class="box" required placeholder="12345678" autocomplete="tel">
 
 
             <label for="checkin-date"><i class="fas fa-calendar-alt"></i> Check-in Date</label>
@@ -89,13 +89,22 @@
 
             <p id="numberOfdays">Days:</p>
 
+            
             <label for="numOfGuests"><i class="fa-solid fa-users"></i> Number of Guests:</label>
-
             <div class="stepper-container">
             <button id="minusBtn" class="minus" type="button"><i class="fas fa-minus"></i></button>
-            <input class="stepper-control" id="numOfGuests" type="number" value="1" min="1" max="30">
+            <input class="stepper-control" id="numOfGuests" type="number" value="1" min="1" max="6">
             <button id="plusBtn" class="plus" type="button"><i class="fas fa-plus"></i></button>
             </div>
+
+
+
+            <label for="RoomType"><i class="fa-solid fa-bed"></i> Room type:</label>
+            <select class="rooms" id="RoomType">
+                    <option> Single-room</option>
+                    <option> Double-room</option>
+                    <option> Suite</option>
+            </select>
 
 
             <button type="submit" id="bookbtn" class="btn">Book</button>
