--- a/login.html
+++ b/login.html
@@ -70,10 +70,10 @@
             <legend>Login</legend>
 
             <label for="login-username"><i class="fas fa-user"></i> Username</label>
-            <input type="text" id="login-username" name="username" class="box" required>
+            <input type="text" id="login-username" name="username" class="box" required autocomplete="username">
 
             <label for="email"><i class="fas fa-envelope"></i> Email</label>
-            <input type="email" id="email" name="email" class="box" required>
+            <input type="email" id="email" name="email" class="box" required autocomplete="email">
 
             <label for="password"><i class="fas fa-lock"></i> Password</label>
             <div class="password-wrapper">
