--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <body>
 
     <!----------------- NAVIGATION------------------ -->
-    <nav id="main-nav">
+    <nav id="main-nav" aria-label="Main navigation">
         <ul class="navi">
             <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="booking.html" target="_blank"><i class="fas fa-calendar-check"></i> Book</a></li>
@@ -81,9 +81,9 @@
         images/hotel_header_400px.jpg 400w," alt="Encryptia Hotel Header">
         <div class="header-content">
         <h1>Welcome to Encryptia Hotel</h1>
-        <blockquote>Experience the <em>perfect blend of luxury</em> and comfort in the <strong>heart of the city</strong>.
+        <p>Experience the <em>perfect blend of luxury</em> and comfort in the <em>heart of the city</em>.
             Whether you're here for business or leisure, our world class amenities and <em>personalized service</em>
-            will make your stay unforgettable.</blockquote></div>
+            will make your stay unforgettable.</p></div>
     </header>
 
     <div id="MainPageContent">
