--- a/login.html
+++ b/login.html
@@ -51,7 +51,7 @@
 <body id="bodyy">
         <!----------------- NAVIGATION------------------ -->
 <header>
-    <nav id="main-nav">
+    <nav id="main-nav" aria-label="Main navigation">
         <ul class="navi">
             <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="booking.html" target="_blank"><i class="fas fa-calendar-check"></i> Book</a></li>
