--- a/register.html
+++ b/register.html
@@ -54,7 +54,7 @@
 <body id="bodyy">
     <!----------------- NAVIGATION------------------ -->
     <header>
-        <nav>
+        <nav aria-label="Main navigation">
             <ul class="navi">
                 <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="booking.html" target="_blank"><i class="fas fa-calendar-check"></i> Book</a></li>
