--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             will make your stay unforgettable.</p></div>
     </header>
 
-    <div id="MainPageContent">
+    <main>
     <section id="rooms">
         <h2>Rooms</h2>
         <p> Our rooms are designed to provide an <strong>unparalleled experience of luxury and comfort</strong>.
@@ -226,7 +226,7 @@
             </figcaption>
         </figure>
     </section>
-</div>
+</main>
 
 
 
@@ -248,7 +248,7 @@
                         Street,
                         Cityville, 56789</a></p>
                 <p><a href="tel:123456789">☎️ 123456789</a></p>
-                <p><a href="mailto:hotel@encryptia.com" target="_blank">✉️ hotel@encryptia.com</a></p>
+                <p><a href="mailto:hotel@encryptia.com">✉️ hotel@encryptia.com</a></p>
             </address>
         </div>
         <p class="twdev"><small>© 2025 by tw1996-dev</small></p>
