--- a/register.html
+++ b/register.html
@@ -127,7 +127,7 @@
                         Street,
                         Cityville, 56789</a></p>
                 <p><a href="tel:123456789">☎️ 123456789</a></p>
-                <p><a href="mailto:hotel@encryptia.com" target="_blank">✉️ hotel@encryptia.com</a></p>
+                <p><a href="mailto:hotel@encryptia.com">✉️ hotel@encryptia.com</a></p>
             </address>
         </div>
         <p class="twdev"><small>© 2025 by tw1996-dev</small></p>
